:memo: Typespec change_password & delete_session
